Fix: Add correct CORS origin for Netlify

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-MONGO_URI=mongodb://localhost:27017/courseCatalog
+MONGO_URI=mongodb+srv://admin:Abhina25@cluster0.2bpyecn.mongodb.net/courseCatalog?retryWrites=true&w=majority&appName=Cluster0
+
+
 PORT=5000
